--- a/ProjectManagement/nbproject/project.properties
+++ b/ProjectManagement/nbproject/project.properties
@@ -27,9 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProjectManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Tomambid\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\..\\Downloads\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
